feat: update translations and profile screen UI for improved clarity and localization
- **English translations**:
  - Simplified search placeholder for nurse offices.
  - Replaced "stores" with "offices" where relevant.
  - Changed "Featured Stores" to "Featured Nursing offices".
  - Updated multiple vendor-related keys to use "Partner" instead of "Vendor" for a more neutral term.
  - Adjusted copyright.
  - Added `restaurants_near_you` key for nurse offices.
  - Updated phrases for store/office searches and related UI text.

- **Profile screen**:
  - Added `textDirection: TextDirection.ltr` to the "joined" date text for correct date formatting.
  - Reordered "joined" text to display date first followed by the label for improved readability.

--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -52,8 +52,8 @@
   "pick_an_address": "Pick an address",
   "choose_your_interests": "Choose \nYour Interests",
   "get_personalized_recommendations": "Get personalized item recommendations",
-  "search_food_or_restaurant": "Search your desired Nurse Office",
-  "search_item_or_store": "Search your desired items or stores",
+  "search_food_or_restaurant": "Search here",
+  "search_item_or_store": "Search your desired items or offices",
   "categories": "Categories",
   "popular_items_nearby": "Popular Items Nearby",
   "restaurants": "Nurse Office",
@@ -437,11 +437,11 @@
   "cancel_delivery": "Cancel Delivery",
   "delivery_id": "Delivery ID",
   "version_1.1": "Version 1.1",
-  "featured_stores": "Featured Stores",
+  "featured_stores": "Featured Nursing offices",
   "max_size_2_mb": "Max size 2MB",
   "version_1.2": "Version 1.2",
   "no_parcel_category_data_found": "No parcel category data found",
-  "search_item_in_store": "Search item in store...",
+  "search_item_in_store": "Search item in office...",
   "write_item_name": "Write item name",
   "view_more": "View More",
   "news_letter": "NEWS LETTER",
@@ -454,7 +454,7 @@
   "quick_links": "Quick Links",
   "my_account": "My Account",
   "contact_us": "Contact Us",
-  "copyright": "Copyright © 6amTech",
+  "copyright": "Copyright © FullCare",
   "terms_and_condition": "Terms & Conditions",
   "add_address": "Add Address",
   "subscribed_successfully": "Subscribed successfully",
@@ -937,7 +937,7 @@
   "i_agree_with_all_the": "I Agree with all the",
   "type_your_address_here_to_pick_form_map": "Type your address here to pick form map",
   "money_refund": "Money Refund",
-  "search_items_and_stores": "Search Items & Stores",
+  "search_items_and_stores": "Search Items & Offices",
   "recent_searches": "Recent searches",
   "minimum_order_amount": "Minimum ",
   "wish_list": "Wishlist ",
@@ -1071,8 +1071,9 @@
   "most_popular_items": "Most Popular Items",
   "কাছা": "From You",
   "open_now": "Open Now",
+  "restaurants_near_you":"nurse offices Near you",
   "item_that_you_love": "For You",
-  "best_store_nearby": "Best Stores Nearby",
+  "best_store_nearby": "Best nurse offices Nearby",
   "start_from": "Start From",
   "just_for_you": "Just for You",
   "new": "NEW",
@@ -1356,7 +1357,7 @@
   "same_vehicle": "Same vehicle",
   "quantity_available": "quantity available",
   "coupons": "Coupons",
-  "vendor_details": "Vendor Details",
+  "vendor_details": "Partner Details",
   "invite_friends_and_family_to_get": "Invite friends and family to get the best offers & earn money",
   "result_found_for": "result found for",
   "air_conditioned": "Air Conditioned",
@@ -1383,13 +1384,13 @@
   "track_trip": "Track Trip",
   "order": "Order",
   "your_booking_is": "Your Booking is",
-  "please_wait_for_vendor_confirmation": "Please Wait for Vendor Confirmation",
+  "please_wait_for_vendor_confirmation": "Please Wait for Partner Confirmation",
   "driver_will_arrive_soon_to_the_pickup_location": "Driver will arrive soon to the pickup location",
   "vehicle_license_number": "Vehicle License Number",
   "assigned_driver": "Assigned Driver",
   "you_will_be_reached_your_destination_approximately": "You’ll be reached your destination approximately",
   "are_you_sure_want_to_cancel_the_booking": "Are you sure, want to cancel the booking?",
-  "once_you_cancel_the_booking_vendor_will_no_longer_get_the_booking_request_for_this_trip": "Once you cancel the booking, Vendor will no longer get the booking request for this trip.",
+  "once_you_cancel_the_booking_vendor_will_no_longer_get_the_booking_request_for_this_trip": "Once you cancel the booking, Partner will no longer get the booking request for this trip.",
   "yes_cancel": "Yes, Cancel",
   "your_trip_has_been": "Your Trip has been",
   "total_trip_cost": "Total trip cost",
@@ -1453,30 +1454,30 @@
   "your_cart_is_empty": "Haven’t ordered anything yet?.. Order our care now",
   "please_enter_valid_estimate_time": "Please enter valid estimate time",
   "payment_failed": "Payment Failed",
-  "vendor_registration": "Vendor Registration",
-  "vendor_info": "Vendor Info",
+  "vendor_registration": "Partner Registration",
+  "vendor_info": "Partner Info",
   "join_as_vendor": "Join as Vendor",
-  "write_vendor_name": "Write Vendor Name",
-  "vendor_name": "Vendor Name",
-  "vendor_name_field_is_required": "Vendor name field is required",
-  "vendor_logo": "Vendor Logo",
-  "upload_vendor_logo": "Upload Vendor Logo",
-  "vendor_cover": "Vendor Cover",
-  "upload_vendor_cover": "Upload Vendor Cover",
-  "vendor_preference": "Vendor Preference",
-  "vendor_vat_tax_field_is_required": "Vendor VAT Tax field is required",
-  "this_info_will_need_for_vendor_app_and_panel_login": "This info will need for vendor app and panel login",
-  "vendor_will_pay": "Vendor will pay",
-  "run_vendor_by_purchasing_subscription_packages": "Run vendor by purchasing subscription packages. You will have access the features of in vendor panel , app and interaction with user according to the subscription packages.",
-  "vendor_information": "Vendor Information",
-  "write_vendor_address": "Write vendor address",
-  "vendor_address_field_is_required": "Vendor address field is required",
-  "enter_vendor_name": "Enter vendor name",
-  "select_vendor_logo": "Select vendor logo",
-  "select_vendor_cover_photo": "Select vendor cover photo",
-  "set_vendor_location": "Set vendor location",
-  "provide_vendor_information_to_proceed_next": "Provide vendor information to proceed next",
-  "open_vendor": "Open Vendor",
+  "write_vendor_name": "Write Partner Name",
+  "vendor_name": "Partner Name",
+  "vendor_name_field_is_required": "Partner name field is required",
+  "vendor_logo": "Partner Logo",
+  "upload_vendor_logo": "Upload Partner Logo",
+  "vendor_cover": "Partner Cover",
+  "upload_vendor_cover": "Upload Partner Cover",
+  "vendor_preference": "Partner Preference",
+  "vendor_vat_tax_field_is_required": "Partner VAT Tax field is required",
+  "this_info_will_need_for_vendor_app_and_panel_login": "This info will need for Partner app and panel login",
+  "vendor_will_pay": "Partner will pay",
+  "run_vendor_by_purchasing_subscription_packages": "Run Partner by purchasing subscription packages. You will have access the features of in vendor panel , app and interaction with user according to the subscription packages.",
+  "vendor_information": "Partner Information",
+  "write_vendor_address": "Write Partner address",
+  "vendor_address_field_is_required": "Partner address field is required",
+  "enter_vendor_name": "Enter Partner name",
+  "select_vendor_logo": "Select Partner logo",
+  "select_vendor_cover_photo": "Select Partner cover photo",
+  "set_vendor_location": "Set Partner location",
+  "provide_vendor_information_to_proceed_next": "Provide Partner information to proceed next",
+  "open_vendor": "Open Partner",
   "write_trip_id": "Write Trip ID",
   "coupon_applied_successfully": "Coupon applied successfully",
   "trip_booking": "Trip booking",
