feat: update cancellation reason display, Arabic translation, assetlinks fingerprint, and API base URL
- **order_info_widget.dart**:
  - Show cancellation note section only if `orderStatus` is `canceled` **and** `cancellationReason` is not null or `"null"`.
  - Added trim check to avoid displaying invalid/null-like strings.

- **ar.json**:
  - Updated `"cancellation_note"` translation from "مذكرة الإلغاء" to "سبب الالغاء" for better clarity.

- **review_dialog_widget.dart**:
  - Minor formatting adjustment for better code readability.

- **assetlinks.json**:
  - Updated `sha256_cert_fingerprints` value to new certificate fingerprint.

- **app_constants.dart**:
  - Changed `baseUrl` from production URL `https://fullcareu.com` to local development URL `http://192.168.100.200:8080/fullcareu`.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -768,7 +768,7 @@
   "no_reasons_available": "لا توجد أسباب متاحة",
   "you_did_not_select_select_any_reason": "لم تقم بتحديد تحديد أي سبب",
   "switch_to_cod": "قم بالتبديل إلى COD",
-  "cancellation_note": "مذكرة الإلغاء",
+  "cancellation_note": "سبب الالغاء",
   "enter_pickup": "أدخل بيك اب",
   "do_not_have_account": "ليس لديك حساب؟",
   "already_have_account": "هل لديك حساب بالفعل؟",
