build(android/ios): update Maps API keys; set FCM defaults; app links; plus i18n & robustness fixes
### Android
- **AndroidManifest.xml**
  - Replace Google Maps API key with a new one.
  - Configure Firebase Messaging defaults:
    - `com.google.firebase.messaging.default_notification_channel_id = "high_importance_channel"`.
    - `com.google.firebase.messaging.default_notification_icon = @drawable/notification_icon`.
  - Remove the old `default_notification_channel_id` meta under `MainActivity` (was `fullcareu`) to avoid conflicts.

- **app_data/other/assetlinks.json**
  - Add `"delegate_permission/common.get_login_creds"` to the `relation` array (alongside `handle_all_urls`) to support Android Credential Manager for sign-in.

### iOS
- **Runner/AppDelegate.swift**
  - Update `GMSServices.provideAPIKey(...)` to the new Google Maps API key.
- **Runner.xcodeproj/project.pbxproj**
  - `objectVersion` adjusted to `54` (tooling sync). No code impact.

### Internationalization (AR)
- **assets/language/ar.json**
  - `floor`: "أرضية" → **"طابق"**.
  - `complete`: "مكتمل" → **"إنهاء"**.

### UI & Code Quality
- **corner_discount_tag.dart**
  - Remove redundant duplicate `material.dart` import (was imported twice, one with `hide Banner`).
- **manual_login_widget.dart**
  - Simplify text usage: drop unnecessary string interpolation for `'forget_password'.tr`.

### Store & Routing Robustness
- **store_controller.dart**
  - Null-safe call to details API: `store.id?.toString() ?? ''` to prevent `null` conversions.
- **store_model.dart**
  - Parse `featured` via `int.tryParse(...)` to avoid runtime exceptions on non-numeric payloads.
- **route_helper.dart**
  - Ensure store route always passes a string: `slug ?? ''` to avoid `null` in query params.

---

#### Notes / Considerations
- Make sure the **"high_importance_channel"** notification channel is created at runtime before posting notifications, or FCM will fall back to a default channel on Android 8+.
- Verify `@drawable/not

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -478,7 +478,7 @@
   "version_1.4": "الإصدار 1.4",
   "street_number": "رقم الشارع",
   "house": "منزل",
-  "floor": "أرضية",
+  "floor": "طابق",
   "sender_address": "عنوان المرسل",
   "optional": "اختياري",
   "set_from_saved_address": "تم التعيين من العنوان المحفوظ",
@@ -695,7 +695,7 @@
   "credit_card": "بطاقة إئتمان",
   "bank": "بنك",
   "booking_details": "تفاصيل الحجز",
-  "complete": "مكتمل",
+  "complete": "إنهاء",
   "call_now": "اتصل الآن",
   "chat_now": "الدردشة الآن",
   "car_number": "رقم السيارة",
