i18n(ui): align order status copy with “completion” flow + force LTR stars in rating bar
Language updates
- **Arabic (`assets/language/ar.json`)**
  - Refine order lifecycle copy for service context:
    - `delivery_on_the_way`: "التسليم في الطريق" → **"في الطريق"**
    - `ordered_at`: **"تم الطلب في"**
    - `confirmed`: **"تم التأكيد"**
    - `handover`: **"خروج الموظف"**
    - `picked_up`: **"في الطريق"**
    - `delivered`: **"تم الانتهاء"**
    - `delivered_at`: **"تم الانتهاء في"**
  - Customer-facing messages:
    - `your_food_will_delivered_within`: **"سيتم انهاء طلبك "** (matches service completion)
    - `order_delivered`: **"تم انهاء الطلب"**

- **English (`assets/language/en.json`)**
  - Harmonize wording with completion-based flow:
    - `delivery_on_the_way`: "Delivery on the way" → **"On the way"**
    - `picked_up`: **"On the way"**
    - `delivered`: **"Completed"**
    - `delivered_at`: **"Complete at"**
  - Customer-facing messages:
    - `your_food_will_delivered_within`: **"Your order will complete within"**
    - `order_delivered`: **"Order Completed"**

UI/UX
- **Rating bar (`lib/common/widgets/rating_bar.dart`)**
  - Enforce `textDirection: TextDirection.ltr` so star order renders correctly in RTL locales.

Why
- Consistent terminology across app for service completion vs. parcel “delivery”.
- Clearer status progression for users.
- Fix RTL rendering quirk in rating stars.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -195,7 +195,7 @@
   "order_placed": "تم تقديم الطلب",
   "order_confirmed": "تم تأكيد الطلب",
   "preparing_item": "يتم الاعداد",
-  "delivery_on_the_way": "التسليم في الطريق",
+  "delivery_on_the_way": "في الطريق",
   "view_on_map": "عرض على الخريطة",
   "back_to_home": "العودة إلى الرئيسيه",
   "trip_route": "طريق الرحلة",
@@ -242,22 +242,22 @@
   "order_now": "اطلب الآن",
   "cancel_order": "إلغاء الطلب",
   "order_cancelled": "تم إلغاء الطلب",
-  "ordered_at": "أمر في",
+  "ordered_at": "تم الطلب في",
   "paid": "مدفوع",
   "unpaid": "غير مدفوعة الأجر",
   "pending": "قيد الانتظار",
   "accepted": "مقبول",
   "processing": "قيد المعالجة",
-  "confirmed": "مؤكد",
-  "handover": "عملية التسليم",
-  "picked_up": "تم الاستلام",
-  "delivered": "تم التوصيل",
+  "confirmed": "تم التأكيد",
+  "handover": "خروج الموظف",
+  "picked_up": "في الطريق",
+  "delivered": "تم الانتهاء",
   "refund_requested": "طلب استرداد الأموال",
   "refunded": "تم الاسترداد",
   "returned": "عاد",
   "failed": "فشل الدفع",
   "canceled": "تم الإلغاء",
-  "delivered_at": "تم التسليم في",
+  "delivered_at": "تم الانتهاء في",
   "payment_info": "معلومات الدفع",
   "status": "حالة",
   "method": "طريقة",
@@ -829,7 +829,7 @@
   "add_more_delivery_instruction": "إضافة المزيد من تعليمات التسليم",
   "it_s_a_great_way_to_show_your_appreciation_for_their_hard_work": "إنها طريقة رائعة لإظهار تقديرك لعملهم الشاق",
   "schedule_time_tool_tip": "يمكنك الطلب على الفور أو يمكنك أيضًا الطلب عن طريق جدولة الوقت",
-  "your_food_will_delivered_within": "سيتم تسليم طلبك ",
+  "your_food_will_delivered_within": "سيتم انهاء طلبك ",
   "general_info": "معلومات عامة",
   "order_date": "تاريخ الطلب",
   "item_info": "معلومات العنصر",
@@ -1055,7 +1055,7 @@
   "order_accepted": "تم قبول الطلب",
   "order_is_on_the_way": "الطلب في الطريق",
   "your_delivery_man_is_coming": "موظفالخاص بك قادم",
-  "order_delivered": "تم تسليم الطلب",
+  "order_delivered": "تم انهاء الطلب",
   "bringing_happiness_from_door_to_door": "جلب السعادة من الباب إلى الباب",
   "ready_to_send_something_special": "على استعداد لإرسال شيء خاص؟",
   "easiest_way_to_get_services": "أسهل طريقة للحصول على الخدمات",
