--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -197,7 +197,7 @@
   "order_placed": "Order Placed",
   "order_confirmed": "Order Confirmed",
   "preparing_item": "Preparing Item",
-  "delivery_on_the_way": "Delivery on the way",
+  "delivery_on_the_way": "On the way",
   "view_on_map": "View on Map",
   "back_to_home": "Back to Home",
   "trip_route": "Trip Route",
@@ -252,14 +252,14 @@
   "processing": "Processing",
   "confirmed": "Confirmed",
   "handover": "Handover",
-  "picked_up": "Picked Up",
-  "delivered": "Delivered",
+  "picked_up": "On the way",
+  "delivered": "Completed",
   "refund_requested": "Refund Requested",
   "refunded": "Refunded",
   "returned": "Returned",
   "failed": "Payment Failed",
   "canceled": "Cancelled",
-  "delivered_at": "Delivered at",
+  "delivered_at": "Complete at",
   "payment_info": "Payment Info",
   "status": "Status",
   "method": "Method",
@@ -830,7 +830,7 @@
   "add_more_delivery_instruction": "Add More Delivery Instruction",
   "it_s_a_great_way_to_show_your_appreciation_for_their_hard_work": "It's a great way to show your appreciation for their hard work",
   "schedule_time_tool_tip": "You can order instantly or you can also order by scheduling the time",
-  "your_food_will_delivered_within": "Your order will delivered within",
+  "your_food_will_delivered_within": "Your order will complete within",
   "general_info": "General Info",
   "order_date": "Order date",
   "item_info": "Item Info",
@@ -1056,7 +1056,7 @@
   "order_accepted": "Order Accepted",
   "order_is_on_the_way": "Order is On the Way",
   "your_delivery_man_is_coming": "Your nurse is coming",
-  "order_delivered": "Order Delivered",
+  "order_delivered": "Order Completed",
   "bringing_happiness_from_door_to_door": "Bringing Happiness From Door To Door",
   "ready_to_send_something_special": "Ready to send something special?",
   "easiest_way_to_get_services": "Easiest way to get services",
