change in translation

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -55,7 +55,7 @@
   "categories": "فئات",
   "popular_items_nearby": "العناصر الشعبية القريبة",
   "restaurants": "مكاتب التمريض",
-  "stores": "مكاتب",
+  "stores": "مكاتب التمريض",
   "all_restaurants": "جميع مكاتب التمريض",
   "all_stores": "جميع مكاتب التمريض",
   "please_enter_mobile": "يرجى إدخال رقم هاتفك المحمول المسجل حتى نتمكن من مساعدتك في استعادة كلمة المرور الخاصة بك.",
@@ -156,7 +156,7 @@
   "saved_address": "العنوان المحفوظ",
   "add_new_address": "إضافة عنوان جديد",
   "home": "الرئيسيه",
-  "office": "مكتب",
+  "office": "مكتب تمريض",
   "others": "عناوين اخري",
   "delivery_address": "عنوان التسليم",
   "add_the_location_correctly": "أضف الموقع بشكل صحيح",
@@ -298,10 +298,10 @@
   "store_details": "تفاصيل مقدم الخدمة",
   "direction": "اتجاه",
   "restaurant_is_closed_now": "مكتب التمريض مغلق الآن",
-  "store_is_closed_now": "المتجر مغلق الآن",
+  "store_is_closed_now": "المكتب مغلق الآن",
   "km": "كم",
   "restaurant": "مكتب التمريض",
-  "store": "محل",
+  "store": "مكتب تمريض",
   "back_press_again_to_exit": "اضغط مرة أخرى للخروج",
   "no_saved_address_found": "لم يتم العثور على عنوان محفوظ",
   "no_category_item_found": "لم يتم العثور على أي عنصر فئة",
@@ -351,7 +351,7 @@
   "new_address_added_successfully": "تمت إضافة العنوان الجديد بنجاح",
   "restaurant_reviews": "تقييمات مكاتب التمريض",
   "store_reviews": "تقييمات المتجر",
-  "popular_Nurse_Office": "مطاعم شعبية",
+  "popular_Nurse_Office": "مكاتب تمريض معروفه",
   "popular_stores": "مكاتب التمريض المعروفه",
   "new_on": "جديد على",
   "restaurant_is_closed": "المكتب مغلق",
