--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -43,8 +43,8 @@
   "did_not_receive_the_code": "Didn't receive the code?",
   "resend": "Resend",
   "verified": "Verified",
-  "find_stores_and_items": "Find Stores and Items Near You",
-  "by_allowing_location_access": "By allowing location access, you can search for stores and items near you and receive more accurate delivery.",
+  "find_stores_and_items": "Find Nurse Offices and Items Near You",
+  "by_allowing_location_access": "By allowing location access, you can search for Nurse Offices and items near you and receive more accurate delivery.",
   "user_current_location": "Use Current Location",
   "set_from_map": "Set From Map",
   "you_can_change_language": "*You can change language later from menu bar",
@@ -57,9 +57,9 @@
   "categories": "Categories",
   "popular_items_nearby": "Popular Items Nearby",
   "restaurants": "Nurse Office",
-  "stores": "Stores",
+  "stores": "Nurse Office",
   "all_restaurants": "All Nurse Offices",
-  "all_stores": "All Stores",
+  "all_stores": "All Nurse Offices",
   "please_enter_mobile": "Please enter your registered Mobile Number so that we can help you to recover your password.",
   "done": "Done",
   "enter_new_password": "Enter your new password and confirm password.",
@@ -158,7 +158,7 @@
   "saved_address": "Saved Address",
   "add_new_address": "Add New Address",
   "home": "Home",
-  "office": "Office",
+  "office": "Nursing Office",
   "others": "Other Addresses",
   "delivery_address": "Delivery Address",
   "add_the_location_correctly": "Add the location Correctly",
@@ -300,10 +300,10 @@
   "store_details": "Service partner details",
   "direction": "Direction",
   "restaurant_is_closed_now": "Nurse Office is closed now",
-  "store_is_closed_now": "Store is closed now",
+  "store_is_closed_now": "Nurse Office is closed now",
   "km": "km",
   "restaurant": "Nurse Office",
-  "store": "Store",
+  "store": "Nurse Office",
   "back_press_again_to_exit": "Back press again to exit",
   "no_saved_address_found": "No saved address found",
   "no_category_item_found": "No category item found",
@@ -328,9 +328,9 @@
   "settings": "Settings",
   "service_not_available_in_current_location": "Service not available in your current location",
   "currently_opened_restaurants": "Currently Opened Nurse Offices",
-  "currently_opened_stores": "Currently Opened Stores",
+  "currently_opened_stores": "Currently Opened Nurse Offices",
   "discounted_restaurants": "Discounted Nurse Offices",
-  "discounted_stores": "Discounted Stores",
+  "discounted_stores": "Discounted Nurse Offices",
   "the_minimum_item_purchase_amount_for_this_coupon_is": "The minimum purchase amount for this coupon is",
   "but_you_have": "but you have",
   "non_changeable": "Non changeable",
@@ -354,10 +354,10 @@
   "restaurant_reviews": "Nurse Office Reviews",
   "store_reviews": "Store Reviews",
   "popular_Nurse_Office": "Popular Nurse Office",
-  "popular_stores": "Popular Stores",
+  "popular_stores": "Popular Nurse Offices",
   "new_on": "New on",
   "restaurant_is_closed": "Nurse Office is closed",
-  "store_is_closed": "Store is closed",
+  "store_is_closed": "Nurse Offices is closed",
   "id": "ID",
   "no_review_found": "No review found",
   "delivery_time": "Delivery Time",
@@ -466,7 +466,7 @@
   "download_app_to_enjoy_more": "Download app to enjoy more!",
   "download_our_app_from": "Download our app from",
   "trusted_by_customers_and_store_owners": "Trusted by customers and store owners",
-  "thousands_of_stores": "Thousands of stores",
+  "thousands_of_stores": "Thousands of Nurse Offices",
   "excellent_shopping_experience": "Excellent Shopping Experience",
   "easy_checkout_and_payment_system": "Easy Checkout & payment system",
   "become_a_seller": "Become a Seller",
@@ -595,7 +595,7 @@
   "salary_based": "Salary Based",
   "find_nearby_store_near_you": "Find Nearby \nStore Near You",
   "see_location": "See Location",
-  "nearby_stores": "Nearby Stores",
+  "nearby_stores": "Nearby Nurse Offices",
   "can_not_add_more_than_3_image": "Can not add more than 3 image",
   "no_conversation_found": "No conversation found",
   "no_message_found": "No message found",
@@ -927,7 +927,7 @@
   "add_fund_form_secured_digital_payment_gateways": "Add fund Form secured Digital payment gateways",
   "select_payment_method": "Select Payment Method",
   "about": "About",
-  "find_stores": "Find Stores",
+  "find_stores": "Find Nurse Offices",
   "blogs": "Blogs",
   "help_center": "Help Center",
   "shipping": "Shipping",
@@ -937,7 +937,7 @@
   "i_agree_with_all_the": "I Agree with all the",
   "type_your_address_here_to_pick_form_map": "Type your address here to pick form map",
   "money_refund": "Money Refund",
-  "search_items_and_stores": "Search Items & Offices",
+  "search_items_and_stores": "Search Items & Nurse Offices",
   "recent_searches": "Recent searches",
   "minimum_order_amount": "Minimum ",
   "wish_list": "Wishlist ",
@@ -1092,7 +1092,7 @@
   "cough_cold_flue": "Cough, Cold & Flue",
   "diabetes": "Diabetes",
   "eye_ear": "Eye & Ear",
-  "recommended_stores": "Recommended Stores !",
+  "recommended_stores": "Recommended Nurse Offices !",
   "recommended_restaurants": "Recommended Nurse Offices !",
   "see_all": "See All",
   "best_reviewed_products": "Best Reviewed Products",
@@ -1265,7 +1265,7 @@
   "popular_categories": "Popular Categories",
   "no_category_available": "No Categories Available",
   "Nurse Office_near_you": "Nurse Office near you",
-  "stores_near_you": "stores near you",
+  "stores_near_you": "Nurse Offices near you",
   "open_at": "Open at",
   "newly_joined": "Newly joined",
   "popular": "Popular",
