feat(order): structured “Your address” view + i18n updates
* i18n: update `"delivery_details"` — EN: “Your address”, AR: “عنوانك”.
* DeliveryDetailsWidget:

  * Change API to accept `AddressModel?` instead of `String?`.
  * Render rich address line from `landmark`, `street_number`, `house_no`, `floor_no` with separators.
  * Keep full address below (ellipsis), tweak icon color and spacing.
* OrderInfoWidget:

  * Pass `order.deliveryAddress` (model) to `DeliveryDetailsWidget`.
  * Remove unused store address block.
* UI polish: use `Text.rich`, bold values, consistent padding.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -894,7 +894,7 @@
   "select_module_type": "حدد نوع الوحدة",
   "please_select_module_first": "الرجاء تحديد الوحدة أولاً",
   "please_select_zone": "الرجاء تحديد المنطقة",
-  "delivery_details": "تفاصيل التسليم",
+  "delivery_details": "عنوانك",
   "delivery_man_details": "تفاصيل الموظف",
   "from_store": "من مكتب تمريض",
   "cash": "نقدي",
