--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -895,7 +895,7 @@
   "select_module_type": "Select Module Type",
   "please_select_module_first": "Please select module first",
   "please_select_zone": "Please select Zone",
-  "delivery_details": "Partner Details",
+  "delivery_details": "Your address",
   "delivery_man_details": "Nurse Details",
   "from_store": "From Store",
   "cash": "Cash",
