feat(i18n): refine AR/EN copy, shift “store” → “partner”, and service-focused wording
* Add `order_processing_after_payment_confirmation` (AR/EN).
* AR: replace “العناصر/المتجر” with “الخدمات/مكتب التمريض” in search, availability, reviews, registration, URLs, preferences, info, and guidance strings; improve phrasing and consistency; fix spacing/typos (e.g., `forget_password`).
* EN: replace “store” with “partner” across reviews, registration, addresses, URLs, preferences, info, and guidance strings; adjust copy to “services” where relevant; fix typos (e.g., `partnerNear You` → “Partner Near You” context).
* Keep keys stable; only values updated for UX clarity and brand terminology.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -42,17 +42,17 @@
   "did_not_receive_the_code": "لم تتلق الرمز؟",
   "resend": "إعادة الإرسال",
   "verified": "تم التحقق منه",
-  "find_stores_and_items": "البحث عن مكاتب التمريض والعناصر القريبة منك",
-  "by_allowing_location_access": "من خلال السماح بالوصول إلى الموقع، يمكنك البحث عن مكاتب التمريض والعناصر القريبة منك والحصول على توصيل أكثر دقة.",
+  "find_stores_and_items": "البحث عن مكاتب التمريض والخدمات القريبة منك",
+  "by_allowing_location_access": "من خلال السماح بالوصول إلى الموقع، يمكنك البحث عن مكاتب التمريض والخدمات القريبة منك والحصول على توصيل أكثر دقة.",
   "user_current_location": "استخدم الموقع الحالي",
   "set_from_map": "تعيين من الخريطة",
   "you_can_change_language": "*يمكنك تغيير اللغة لاحقا من شريط القوائم",
   "resend_code_successful": "تمت إعادة إرسال الرمز بنجاح",
   "pick_an_address": "اختر عنوانًا",
   "choose_your_interests": "اختر \nاهتماماتك",
-  "get_personalized_recommendations": "احصل على توصيات العناصر المخصصة",
+  "get_personalized_recommendations": "احصل على توصيات الخدمات المخصصة",
   "search_food_or_restaurant": "ابحث هنا",
-  "search_item_or_store": "ابحث عن العناصر أو مكاتب التمريض المطلوبة",
+  "search_item_or_store": "ابحث عن الخدمات أو مكاتب التمريض المطلوبة",
   "categories": "فئات",
   "popular_items_nearby": "العناصر الشعبية القريبة",
   "restaurants": "مكاتب التمريض",
@@ -79,7 +79,7 @@
   "popularity": "شعبية",
   "delivery_charge": "رسوم التوصيل",
   "filter_by": "تصفية حسب",
-  "currently_available_items": "العناصر المتوفرة حاليا",
+  "currently_available_items": "الخدمات المتوفرة حاليا",
   "discounted_items": "العناصر المخفضة",
   "offer": "يعرض",
   "price": "سعر",
@@ -170,7 +170,7 @@
   "if_you_change_location": "لديك بعض العناصر في سلة الطلبات الخاصة بك. إذا قمت بتغيير موقعك، فسيتم إعادة تعيين سلة الطلبات الخاصة بك والبيانات الأخرى المتعلقة بموقع التسليم الحالي الخاص بك.",
   "if_you_change_category": "لديك بعض العناصر في سلة الطلبات الخاصة بك. إذا قمت بتغيير الوحدة الخاصة بك، فسيتم إعادة تعيين سلة الطلبات الخاصة بك والبيانات الأخرى المتعلقة بالوحدة الحالية الخاصة بك.",
   "if_you_continue": "لديك عنصر من مكتب التمريض آخر في سلة الطلبات. إذا تابعت، ستتم إزالة كل العناصر السابقة من سلة الطلبات.",
-  "if_you_continue_without_another_store": "إذا كنت تريد تغيير نوع المتجر، فسيتم إعادة تعيين سلة الطلبات الخاصة بك وبيانات ذاكرة التخزين المؤقت الأخرى ذات الصلة.",
+  "if_you_continue_without_another_store": "إذا كنت تريد تغيير نوع مكتب التمريض، فسيتم إعادة تعيين سلة الطلبات الخاصة بك وبيانات ذاكرة التخزين المؤقت الأخرى ذات الصلة.",
   "yes_and_continue": "نعم واستمر",
   "total_order": "إجمالي الطلب",
   "dark_theme": "موضوع الظلام",
@@ -351,12 +351,12 @@
   "password_updated_successfully": "تم تحديث كلمة المرور بنجاح",
   "new_address_added_successfully": "تمت إضافة العنوان الجديد بنجاح",
   "restaurant_reviews": "تقييمات مكاتب التمريض",
-  "store_reviews": "تقييمات المتجر",
+  "store_reviews": "تقييمات مكتب التمريض",
   "popular_Nurse_Office": "مكاتب تمريض معروفه",
   "popular_stores": "مكاتب التمريض المعروفه",
   "new_on": "جديد على",
   "restaurant_is_closed": "المكتب مغلق",
-  "store_is_closed": "المتجر مغلق",
+  "store_is_closed": "مكتب التمريض مغلق",
   "id": "بطاقة تعريف",
   "no_review_found": "لم يتم العثور على أي مراجعة",
   "delivery_time": "موعد التسليم",
@@ -368,7 +368,7 @@
   "update_address": "تحديث العنوان",
   "add": "اضافه",
   "your_selected_location_is_from_different_zone": "الموقع الذي اخترته خارج نطاق تغطية هذا مكتب التمريض",
-  "your_selected_location_is_from_different_zone_store": "الموقع الذي اخترته خارج نطاق التغطية لهذا المتجر",
+  "your_selected_location_is_from_different_zone_store": "الموقع الذي اخترته خارج نطاق التغطية لهذا مكتب التمريض",
   "veg": "سائل",
   "non_veg": "غير سائل",
   "no_category_restaurant_found": "لم يتم العثور على أي مكتب التمريض من فئة",
@@ -545,15 +545,15 @@
   "contact_with_our_team": "تواصل مع فريق الدعم",
   "chat": "محادثة",
   "whatsapp": "واتس اب",
-  "store_name": "اسم المتجر",
+  "store_name": "اسم مكتب التمريض",
   "deliveryman_name": "اسم مندوب التوصيل",
   "conversation_list": "قائمة المحادثات",
   "vendor": "محل",
   "admin": "مسؤل",
-  "store_registration": "تسجيل المتجر",
-  "enter_store_name": "أدخل اسم المتجر",
-  "store_address": "عنوان المتجر",
-  "enter_store_address": "أدخل عنوان المتجر",
+  "store_registration": "تسجيل مكتب التمريض",
+  "enter_store_name": "أدخل اسم مكتب التمريض",
+  "store_address": "عنوان مكتب التمريض",
+  "enter_store_address": "أدخل عنوان مكتب التمريض",
   "enter_vat_amount": "أدخل مبلغ ضريبة القيمة المضافة",
   "minimum_delivery_time": "الحد الأدنى لوقت التسليم",
   "enter_minimum_delivery_time": "أدخل الحد الأدنى لوقت التسليم",
@@ -561,10 +561,10 @@
   "enter_maximum_delivery_time": "أدخل الحد الأقصى لوقت التسليم",
   "logo": "الشعار",
   "cover_photo": "صورة الغلاف",
-  "select_store_logo": "حدد شعار المتجر",
-  "select_store_cover_photo": "حدد صورة غلاف المتجر",
+  "select_store_logo": "حدد شعار مكتب التمريض",
+  "select_store_cover_photo": "حدد صورة غلاف مكتب التمريض",
   "zone": "منطقة",
-  "set_store_location": "تحديد موقع المتجر",
+  "set_store_location": "تحديد موقع مكتب التمريض",
   "owner_information": "معلومات المالك",
   "login_information": "معلومات تسجيل الدخول",
   "latitude": "خط العرض",
@@ -579,7 +579,7 @@
   "enter_delivery_man_identity_number": "أدخل رقم هوية موظف",
   "upload_delivery_man_image": "تحميل صورة موظف",
   "delivery_man_registration_successful": "تم تسجيل موظف بنجاح",
-  "store_registration_successful": "تم تسجيل المتجر بنجاح",
+  "store_registration_successful": "تم تسجيل مكتب التمريض بنجاح",
   "passport": "جواز سفر",
   "driving_license": "رخصة القيادة",
   "nid": "نيد",
@@ -610,8 +610,8 @@
   "you_do_not_have_enough_point_to_exchange": "ليس لديك ما يكفي من النقاط للتبادل",
   "minute": "دقيقة",
   "hours": "ساعات",
-  "set_your_store_location": "قم بتعيين موقع المتجر الخاص بك",
-  "select_your_store_zone": "حدد منطقة المتجر الخاصة بك",
+  "set_your_store_location": "قم بتعيين موقع مكتب التمريض الخاص بك",
+  "select_your_store_zone": "حدد منطقة مكتب التمريض الخاصة بك",
   "deleted": "تم الحذف",
   "this_is_my_refer_code": "هذا هو رمز المشاركة الخاص بي",
   "refund_request": "طلب استرداد الأموال",
@@ -788,7 +788,7 @@
   "promotional_activity": "النشاط الترويجي",
   "my_wallet": "محفظتي",
   "earnings": "الأرباح",
-  "open_store": "افتح المتجر",
+  "open_store": "افتح مكتب التمريض",
   "complete_registration_process_to_serve_as_delivery_man": "استكمال عملية التسجيل ليكون بمثابة موظف",
   "upload_deliveryman_photo": "تحميل صورة \nموظف التوصيل",
   "select_vehicle_type": "اختر نوع المركبة",
@@ -800,9 +800,9 @@
   "1_special_character": "1 رموز خاصة",
   "provide_valid_password": "توفير كلمة مرور صالحة",
   "pick_delivery_man_profile_image": "اختر الصورة الشخصية لموظف",
-  "provide_store_information_to_proceed_next": "قم بتوفير معلومات المتجر للمتابعة بعد ذلك",
-  "upload_store_logo": "تحميل شعار المتجر",
-  "upload_store_cover": "تحميل غلاف المتجر",
+  "provide_store_information_to_proceed_next": "قم بتوفير معلومات مكتب التمريض للمتابعة بعد ذلك",
+  "upload_store_logo": "تحميل شعار مكتب التمريض",
+  "upload_store_cover": "تحميل غلاف مكتب التمريض",
   "provide_owner_information_to_confirm": "تقديم معلومات المالك للتأكيد!",
   "please_add_your_address_for_your_better_experience": "الرجاء إضافة عنوانك\nلتجربة أفضل",
   "level_name": "اسم المستوى",
@@ -937,12 +937,12 @@
   "i_agree_with_all_the": "وأنا أتفق مع كل",
   "type_your_address_here_to_pick_form_map": "اكتب عنوانك هنا لاختيار نموذج الخريطة",
   "money_refund": "استرداد الأموال",
-  "search_items_and_stores": "بحث العناصر ومكاتب التمريض",
+  "search_items_and_stores": "بحث الخدمات ومكاتب التمريض",
   "recent_searches": "عمليات البحث الأخيرة",
   "minimum_order_amount": "الحد الأدنى ",
   "wish_list": "قائمة الرغبات ",
   "recommended": "موصى به",
-  "search_for_items": "البحث عن العناصر...",
+  "search_for_items": "البحث عن الخدمات...",
   "cart_list": "قائمة العربة",
   "order_summary": "ملخص الطلب",
   "delivery_type": "نوع التسليم",
@@ -1023,7 +1023,7 @@
   "special_offers": "عروض خاصة",
   "due_amount": "المبلغ المستحق",
   "you_can_not_add_less_then_zero_amount_in_wallet": "لا يمكنك إضافة مبلغ أقل من صفر في المحفظة",
-  "store_url_copied": "تم نسخ عنوان URL الخاص بالمتجر",
+  "store_url_copied": "تم نسخ عنوان URL الخاص بمكتب التمريض",
   "read_less": "اقرأ أقل",
   "read_more": "اقرأ المزيد",
   "no_payment_method_is_available": "لا توجد طريقة دفع متاحة",
@@ -1062,7 +1062,7 @@
   "easiest_way_to_get_services": "أسهل طريقة للحصول على الخدمات",
   "orders": "الطلبات",
   "visit_again": "قم بالزيارة مرة أخرى",
-  "get_your_recent_purchase_from_the_shop_you_recently_visited": "احصل على مشترياتك الأخيرة من المتجر الذي قمت بزيارته مؤخرًا",
+  "get_your_recent_purchase_from_the_shop_you_recently_visited": "احصل على خدماتك الأخيرة من مكتب التمريض الذي قمت بزيارته مؤخرًا",
   "special_offer": "عرض خاص",
   "flash_sale": "بيع فلاش",
   "limited_time_offer": "عرض لفترة محدودة",
@@ -1123,7 +1123,7 @@
   "currently_no_recommended_store_available": "حاليا لا يوجد متجر موصى به متاح",
   "currently_no_recommended_restaurant_available": "حاليا لا يوجد مكتب تمريض موصى به متاح",
   "min_order_of": "الحد الأدنى للطلب",
-  "store_list": "قائمة المتجر",
+  "store_list": "قائمة مكتب التمريض",
   "please_wait_until_refresh_complete": "الرجاء الانتظار حتى اكتمال التحديث",
   "choose_delivery_instructions": "اختر تعليمات التسليم",
   "or": "أو",
@@ -1170,29 +1170,29 @@
   "show_less": "عرض أقل",
   "reviews": "التعليقات",
   "business_plan": "خطة العمل",
-  "store_info": "معلومات المتجر",
+  "store_info": "معلومات مكتب التمريض",
   "email_field_is_required": "حقل البريد الإلكتروني مطلوب",
   "enter_valid_email_address": "أدخل عنوان بريد إلكتروني صالحًا",
   "this_field_is_required": "هذه الخانة مطلوبه",
   "minimum_password_is_8_character": "الحد الأدنى لكلمة المرور هو 8 أحرف",
   "confirm_password_field_is_required": "حقل تأكيد كلمة المرور مطلوب",
   "password_must_include_uppercase": "يجب ان تحتوي كلمة المرور على حرف كبير",
-  "write_store_name": "كتابة اسم المتجر",
-  "store_name_field_is_required": "حقل اسم المتجر مطلوب",
-  "store_logo": "شعار المتجر",
-  "store_cover": "غلاف المتجر",
+  "write_store_name": "كتابة اسم مكتب التمريض",
+  "store_name_field_is_required": "حقل اسم مكتب التمريض مطلوب",
+  "store_logo": "شعار مكتب التمريض",
+  "store_cover": "غلاف مكتب التمريض",
   "upload_jpg_png_gif_maximum_2_mb": "تحميل jpg، png، jpeg، gif بحد أقصى 2 ميجابايت",
   "please_place_the_marker_inside_the_zone": "يرجى وضع العلامة داخل المنطقة",
-  "write_store_address": "كتابة عنوان المتجر",
-  "store_address_field_is_required": "حقل عنوان المتجر مطلوب",
+  "write_store_address": "كتابة عنوان مكتب التمريض",
+  "store_address_field_is_required": "حقل عنوان مكتب التمريض مطلوب",
   "not_in_zone": "ليس في المنطقة",
   "please_setup_the_marker_in_your_required_location": "يرجى إعداد العلامة في موقعك المطلوب",
-  "store_preference": "تفضيلات المتجر",
+  "store_preference": "تفضيلات مكتب التمريض",
   "write_vat_tax_amount": "اكتب مبلغ ضريبة القيمة المضافة",
   "please_provide_vat_tax_amount": "يرجى تقديم مبلغ ضريبة القيمة المضافة",
   "store_vat_tax_field_is_required": "حقل ضريبة ضريبة القيمة المضافة للمخزن مطلوب",
   "owner_info": "معلومات المالك",
-  "this_info_will_need_for_store_app_and_panel_login": "ستحتاج هذه المعلومات إلى تطبيق المتجر وتسجيل الدخول إلى اللوحة",
+  "this_info_will_need_for_store_app_and_panel_login": "ستحتاج هذه المعلومات إلى تطبيق مكتب التمريض وتسجيل الدخول إلى اللوحة",
   "write_first_name": "اكتب الاسم الأول",
   "first_name_field_is_required": "حقل الاسم الأول مطلوب",
   "write_last_name": "اكتب الاسم الأخير",
@@ -1214,9 +1214,9 @@
   "choose_your_business_plan": "اختر خطة عملك",
   "commission_base": "قاعدة اللجنة",
   "subscription_base": "قاعدة الاشتراك",
-  "store_will_pay": "سوف يدفع المتجر",
+  "store_will_pay": "سوف يدفع مكتب التمريض",
   "commission_to": "عمولة ل",
-  "from_each_order_You_will_get_access_of_all": "من كل أمر. ستتمكن من الوصول إلى جميع الميزات والخيارات في لوحة المتجر والتطبيق والتفاعل مع المستخدم.",
+  "from_each_order_You_will_get_access_of_all": "من كل أمر. ستتمكن من الوصول إلى جميع الميزات والخيارات في لوحة مكتب التمريض والتطبيق والتفاعل مع المستخدم.",
   "run_store_by_purchasing_subscription_packages": "قم بتشغيل المكتب عن طريق شراء حزم الاشتراك. سيكون لديك إمكانية الوصول إلى الميزات الموجودة في لوحة المكتب والتطبيق والتفاعل مع المستخدم وفقًا لحزم الاشتراك.",
   "no_package_available": "لا توجد حزمة متاحة",
   "continue_with": "تواصل مع",
@@ -1225,7 +1225,7 @@
   "are_you_sure_to_go_back": "هل أنت متأكد من العودة؟",
   "your_registration_has_been_completed_successfully": "لقد تم إتمام تسجيلك بنجاح",
   "location_info": "معلومات الموقع",
-  "store_information": "معلومات المتجر",
+  "store_information": "معلومات مكتب التمريض",
   "back": "خلف",
   "choose_subscription_package": "اختر باقة الاشتراك",
   "write_order_id": "كتابة رقم الطلب",
@@ -1246,7 +1246,7 @@
   "your_registration_not_setup_yet": "التسجيل الخاص بك لم يتم الإعداد بعد",
   "whats_new_on": "ما الجديد في",
   "highlights_for_you": "اختيارات مميزة لك",
-  "see_our_most_popular_store_and_item": "اطلع علي مكاتبنا والعناصر المميزه لدينا",
+  "see_our_most_popular_store_and_item": "اطلع علي مكاتبنا والخدمات المميزه لدينا",
   "create_account_with_existing_info": "إنشاء حساب بالمعلومات الموجودة",
   "enter_confirm_password": "أدخل تأكيد كلمة المرور",
   "you_want_to_disable_notification": "تريد تعطيل الاشعار",
