--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -44,8 +44,8 @@
   "did_not_receive_the_code": "Didn't receive the code?",
   "resend": "Resend",
   "verified": "Verified",
-  "find_stores_and_items": "Find Nurse Offices and Items Near You",
-  "by_allowing_location_access": "By allowing location access, you can search for Nurse Offices and items near you and receive more accurate delivery.",
+  "find_stores_and_items": "Find Nurse Offices and services near You",
+  "by_allowing_location_access": "By allowing location access, you can search for Nurse Offices and services near you and receive more accurate delivery.",
   "user_current_location": "Use Current Location",
   "set_from_map": "Set From Map",
   "you_can_change_language": "*You can change language later from menu bar",
@@ -54,7 +54,7 @@
   "choose_your_interests": "Choose \nYour Interests",
   "get_personalized_recommendations": "Get personalized item recommendations",
   "search_food_or_restaurant": "Search here",
-  "search_item_or_store": "Search your desired items or offices",
+  "search_item_or_store": "Search your desired services or offices",
   "categories": "Categories",
   "popular_items_nearby": "Popular Items Nearby",
   "restaurants": "Nurse Office",
@@ -172,7 +172,7 @@
   "if_you_change_location": "You have some items in your cart. If you change your location, your cart and other data related to your current delivery location will be reset.",
   "if_you_change_category": "You have some items in your cart. If you change your module, your cart and other data related to your current module will be reset.",
   "if_you_continue": "You have item from another Nurse Office in cart. If you continue, your all previous item from cart will be removed.",
-  "if_you_continue_without_another_store": "If you want to change store type it will reset your cart and other related cache data.",
+  "if_you_continue_without_another_store": "If you want to change partner type it will reset your cart and other related cache data.",
   "yes_and_continue": "Yes and Continue",
   "total_order": "Total Order",
   "dark_theme": "Dark Theme",
@@ -353,7 +353,7 @@
   "password_updated_successfully": "Password updated successfully",
   "new_address_added_successfully": "New address added successfully",
   "restaurant_reviews": "Nurse Office Reviews",
-  "store_reviews": "Store Reviews",
+  "store_reviews": "Partner Reviews",
   "popular_Nurse_Office": "Popular Nurse Office",
   "popular_stores": "Popular Nurse Offices",
   "new_on": "New on",
@@ -374,11 +374,11 @@
   "veg": "Veg",
   "non_veg": "Non-Veg",
   "no_category_restaurant_found": "No category Nurse Office found",
-  "no_category_store_found": "No category store found",
+  "no_category_store_found": "No category partner found",
   "social_login": "Social Login",
   "type": "Type",
   "restaurant_wise": "Nurse Office Wise",
-  "store_wise": "Store Wise",
+  "store_wise": "Partner Wise",
   "zone_wise": "Zone Wise",
   "default": "Default",
   "min_purchase": "Min Purchase",
@@ -466,7 +466,7 @@
   "enjoy_all_services_in_one_platform": "Enjoy all services in one platform",
   "download_app_to_enjoy_more": "Download app to enjoy more!",
   "download_our_app_from": "Download our app from",
-  "trusted_by_customers_and_store_owners": "Trusted by customers and store owners",
+  "trusted_by_customers_and_store_owners": "Trusted by customers and partner owners",
   "thousands_of_stores": "Thousands of Nurse Offices",
   "excellent_shopping_experience": "Excellent Shopping Experience",
   "easy_checkout_and_payment_system": "Easy Checkout & payment system",
@@ -547,15 +547,15 @@
   "contact_with_our_team": "Contact with our team ",
   "chat": "Chat",
   "whatsapp": "Whatsapp",
-  "store_name": "Store Name",
+  "store_name": "Partner Name",
   "deliveryman_name": "Nurse Name",
   "conversation_list": "Conversation List",
   "vendor": "Vendor",
   "admin": "Admin",
-  "store_registration": "Store Registration",
-  "enter_store_name": "Enter store name",
-  "store_address": "Store Address",
-  "enter_store_address": "Enter store address",
+  "store_registration": "Partner Registration",
+  "enter_store_name": "Enter partner name",
+  "store_address": "Partner Address",
+  "enter_store_address": "Enter partner address",
   "enter_vat_amount": "Enter VAT amount",
   "minimum_delivery_time": "Minimum Delivery Time",
   "enter_minimum_delivery_time": "Enter minimum delivery time",
@@ -563,10 +563,10 @@
   "enter_maximum_delivery_time": "Enter maximum delivery time",
   "logo": "Logo",
   "cover_photo": "Cover Photo",
-  "select_store_logo": "Select store logo",
-  "select_store_cover_photo": "Select store cover photo",
+  "select_store_logo": "Select partner logo",
+  "select_store_cover_photo": "Select partner cover photo",
   "zone": "Zone",
-  "set_store_location": "Set store location",
+  "set_store_location": "Set partner location",
   "owner_information": "Owner Information",
   "login_information": "Login Information",
   "latitude": "Latitude",
@@ -581,7 +581,7 @@
   "enter_delivery_man_identity_number": "Enter nurse identity number",
   "upload_delivery_man_image": "Upload nurse image",
   "delivery_man_registration_successful": "Nurse registration successful",
-  "store_registration_successful": "Store registration successful",
+  "store_registration_successful": "Partner registration successful",
   "passport": "Passport",
   "driving_license": "Driving License",
   "nid": "NID",
@@ -594,7 +594,7 @@
   "delivery_man_type": "Nurse Type",
   "freelancer": "Freelancer",
   "salary_based": "Salary Based",
-  "find_nearby_store_near_you": "Find Nearby \nStore Near You",
+  "find_nearby_store_near_you": "Find Nearby \nPartnerNear You",
   "see_location": "See Location",
   "nearby_stores": "Nearby Nurse Offices",
   "can_not_add_more_than_3_image": "Can not add more than 3 image",
@@ -612,8 +612,8 @@
   "you_do_not_have_enough_point_to_exchange": "You do not have enough point to exchange",
   "minute": "Minute",
   "hours": "Hours",
-  "set_your_store_location": "Set Your Store Location",
-  "select_your_store_zone": "Select Your Store Zone",
+  "set_your_store_location": "Set Your Partner Location",
+  "select_your_store_zone": "Select Your Partner Zone",
   "deleted": "Deleted",
   "this_is_my_refer_code": "This is my share code",
   "refund_request": "Refund Request",
@@ -803,8 +803,8 @@
   "provide_valid_password": "Provide valid password",
   "pick_delivery_man_profile_image": "Pick nurse profile image",
   "provide_store_information_to_proceed_next": "Provide store information to proceed next",
-  "upload_store_logo": "Upload Store Logo",
-  "upload_store_cover": "Upload Store Cover",
+  "upload_store_logo": "Upload Partner Logo",
+  "upload_store_cover": "Upload Partner Cover",
   "provide_owner_information_to_confirm": "Provide owner information to confirm!",
   "please_add_your_address_for_your_better_experience": "Please add your address for your\nbetter experience",
   "level_name": "Level Name",
@@ -1024,7 +1024,7 @@
   "special_offers": "Special Offers",
   "due_amount": "Due amount",
   "you_can_not_add_less_then_zero_amount_in_wallet": "You can't add less then zero amount in wallet",
-  "store_url_copied": "Store url copied",
+  "store_url_copied": "Partner url copied",
   "read_less": "Read less",
   "read_more": "Read more",
   "no_payment_method_is_available": "No payment method is available",
@@ -1063,7 +1063,7 @@
   "easiest_way_to_get_services": "Easiest way to get services",
   "orders": "Orders",
   "visit_again": "Visit Again",
-  "get_your_recent_purchase_from_the_shop_you_recently_visited": "Get your recent purchase from the shop you recently visited",
+  "get_your_recent_purchase_from_the_shop_you_recently_visited": "Get your recent purchase from the partner you recently visited",
   "special_offer": "Special Offer",
   "flash_sale": "Flash Sale",
   "limited_time_offer": "Limited Time Offer",
@@ -1078,7 +1078,7 @@
   "start_from": "Start From",
   "just_for_you": "Just for You",
   "new": "NEW",
-  "become_a_store_owner": "Become a Store Owner",
+  "become_a_store_owner": "Become a Partner Owner",
   "send_us_mail": "Send us Mail",
   "find_us_here": "Find us Here",
   "basic_medicine_nearby": "Basic Medicine Nearby",
@@ -1125,7 +1125,7 @@
   "currently_no_recommended_store_available": "Currently no recommended store available",
   "currently_no_recommended_restaurant_available": "Currently no recommended Nurse Office available",
   "min_order_of": "Min Order of",
-  "store_list": "Store List",
+  "store_list": "Partner List",
   "please_wait_until_refresh_complete": "Please wait until refresh complete",
   "choose_delivery_instructions": "Choose Delivery Instructions",
   "or": "Or",
@@ -1172,26 +1172,26 @@
   "show_less": "Show Less",
   "reviews": "Reviews",
   "business_plan": "Business Plan",
-  "store_info": "Store Info",
+  "store_info": "Partner Info",
   "email_field_is_required": "Email field is required",
   "enter_valid_email_address": "Enter valid email address",
   "this_field_is_required": "This field is required",
   "minimum_password_is_8_character": "Minimum password is 8 character",
   "confirm_password_field_is_required": "Confirm password field is required",
   "write_store_name": "Write store name",
-  "store_name_field_is_required": "Store name field is required",
-  "store_logo": "Store Logo",
-  "store_cover": "Store Cover",
+  "store_name_field_is_required": "Partner name field is required",
+  "store_logo": "Partner Logo",
+  "store_cover": "Partner Cover",
   "upload_jpg_png_gif_maximum_2_mb": "Upload jpg, png, jpeg, gif maximum 2 MB",
   "please_place_the_marker_inside_the_zone": "Please place the marker inside the zone",
   "write_store_address": "Write store address",
-  "store_address_field_is_required": "Store address field is required",
+  "store_address_field_is_required": "Partner address field is required",
   "not_in_zone": "Not in zone",
   "please_setup_the_marker_in_your_required_location": "Please setup the marker in your required location",
-  "store_preference": "Store Preference",
+  "store_preference": "Partner Preference",
   "write_vat_tax_amount": "Write VAT Tax Amount",
   "please_provide_vat_tax_amount": "Please provide VAT Tax Amount",
-  "store_vat_tax_field_is_required": "Store VAT Tax field is required",
+  "store_vat_tax_field_is_required": "Partner VAT Tax field is required",
   "owner_info": "Owner Info",
   "this_info_will_need_for_store_app_and_panel_login": "This info will need for store app and panel login",
   "write_first_name": "Write first name",
@@ -1215,7 +1215,7 @@
   "choose_your_business_plan": "Choose your business plan",
   "commission_base": "Commission Base",
   "subscription_base": "Subscription Base",
-  "store_will_pay": "Store will pay",
+  "store_will_pay": "Partner will pay",
   "commission_to": "commission to",
   "from_each_order_You_will_get_access_of_all": "from each order. You will get access of all the features and options in store panel , app and interaction with user.",
   "run_store_by_purchasing_subscription_packages": "Run Nurse Office by puchasing subsciption packages. You will have access the features of in Nurse Office panel , app and interaction with user according to the subscription packages.",
@@ -1226,7 +1226,7 @@
   "are_you_sure_to_go_back": "Are you sure to go back?",
   "your_registration_has_been_completed_successfully": "Your registration has been completed successfully",
   "location_info": "Location Info",
-  "store_information": "Store Information",
+  "store_information": "Partner Information",
   "back": "Back",
   "choose_subscription_package": "Choose Subscription Package",
   "write_order_id": "Write order id",
