feat(checkout,i18n,assets): show “in-progress” state after offline payment + add icon
* i18n: change `order_placed_successfully` copy to “Payment confirmation in progress” (EN) / “جاري تأكيد الدفع” (AR).
* checkout: replace success check icon with new asset in `OfflineSuccessDialog` and style header; load via `Images.inProgress`.
* assets: add `assets/image/in_progress.png` and expose as `Images.inProgress`; update `onboard_3.png`.
* minor: keep existing success description; no logic changes.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -1043,7 +1043,7 @@
   "pay_on_this_account": "الدفع على هذا الحساب",
   "amount": "كمية",
   "write_your_note": "اكتب ملاحظتك",
-  "order_placed_successfully": "تم تقديم الطلب بنجاح!",
+  "order_placed_successfully": "جاري تأكيد الدفع",
   "your_payment_has_been_successfully_processed_and_your_order": "تمت معالجة دفعتك بنجاح، وطلبك",
   "has_been_placed": "تم وضعها.",
   "offline_order_note": "إذا قدمت معلومات دفع غير صحيحة عن طريق الخطأ، فيمكنك تعديل التفاصيل في قسم تفاصيل الطلب بينما لا يزال الطلب معلقًا.",
